change profil image

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_PUBLIC_KEY=public_S4wUZaLrcUniKgEHc6vAL3la0e4= 
-REACT_APP_AUTHENTICATION_ENDPOINT=http://localhost:3008/auth
+REACT_APP_AUTHENTICATION_ENDPOINT=https://toctoc-api.herokuapp.com/images/token
